When the SSL certificate for a domain is changed, any domains which shared the old cert but cannot use the new one will be switched to a copy of the old cert file.
---- Changes since 3.93 ----
Updated the SugarCRM script installer to version 6.5.2, WHCMS to 5.1.2, Django to 1.4.1, phpMyAdmin to 3.5.2.2, ZenPhoto to 1.4.3.1, PHPList to 2.10.19, Drupal to 7.15, RoundCube to 0.8.1, Typo3 to 4.6.12, dotProject to 2.1.6, Piwik to 1.8.3, Z-push to 2.0.2-1437, phpMyFAQ to 2.7.8, and CMS made simple to 1.11.1.
Alias virtual servers that have their own mailboxes and aliases can now be created, rather than always forwarding mail to the destination domain.
When installing Ruby scripts, dependencies like gcc and libfcgi-devel are now installed automatically if possible.
The outgoing IP address for email sent from a domain can now be configured to match the domain's IP, when using Postfix 2.7 or above.
If the system's primary IP address has changed, display a warning message and prompt to update all virtual servers on the old IP.
Virtual servers can now be backed up to the Rackspace Cloud Files service, in a similar way to Virtualmin's S3 backup support.
---- Changes since 3.94 ----
Updated the osCommerce script installer to version 2.3.3, phpBB to 3.0.11, Dolibarr to 3.2.2, SugarCRM to 6.5.5, Radiant to 1.1.0, ZenPhoto to 1.4.3.3, MediaWiki to 1.19.2, WordPress to 3.4.2, Moodle to 2.3.2, DokuWiki to 2012-10-13, OpenX to 2.8.10, Joomla to 2.5.7, Trac to 0.12.4 and 1.0, PiWik to 1.9, CMS Made Simple to 1.11.2, Z-push to 2.0.4, TikiWiki to 6.7 and 9.1, Redmine to 2.1.2, ZenCart to 1.5.1, LimeSurvey to 2.00, Movable Type to 5.2, Roundcube to 0.8.2, phpMyAdmin to 3.5.3, TWiki to 5.1.2, FengOffice to 2.2.0, and TextPattern to 4.5.2. Disabled the Mambo installer, as it appears to be no longer supported or updated.
When running a scheduled backup from within the Virtualmin UI, pre and post backup commands are now run, and old backups purged if configured.