@@ -54,5 +54,3 @@
 
  - OpenCart installer
 	- https://www.virtualmin.com/node/23194
-
- - API command to fix all domain user quotas
